Steps to reproduce: 1. Open any component 2. Go to File - save as 3. Select 'save with password' and save 4. Display More options. -> Enter password to allow editing and Confirm password entries should be disabled if option Open file read-only is unchecked Reproduced in Version: 6.2.0.0.alpha0+ Build ID: 72b099d279e7096d41a04fe8c0dd493a5fc18a33 CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded and LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4
Patch in gerrit: https://gerrit.libreoffice.org/#/c/58400/
Xisco Fauli committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=ba91d344bbf81f9e9cc98e7a9bfef9f5e9cdeb07 tdf#119030: Disable entries if open file read-only is unchecked It will be available in 6.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.