tdf#119030: Disable entries if open file read-only is unchecked

Change-Id: I9e00094f92210a025537f2115e2529acb82d960f